--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="row">
   
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="assets/img/member.jpg" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Members Portal</h5>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="assets/img/intern.jpg" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Interns Portal</h5>
@@ -98,7 +98,7 @@
 
 
     <div class="col">
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <img src="assets/img/admin.jpg" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Admin Portal</h5>
