--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -125,7 +125,7 @@
                                     <li>
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a class="name"><i  class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 30th June 2022</span></a> 
+                                                <a class="name"><i  class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance</a> 
                                             </div>
                                         </div>
                                     </li>
