--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -267,8 +267,12 @@ margin-bottom: 12px; /* Add some space below the input */
                 <th scope="col">Reg No.</th>
               <th scope="col">Name</th>
               <th scope="col" style="text-align: center">Percentage</th>
-              <!-- <th scope="col">Jul2'22</th> 
-              <th scope="col">Jul1'22</th>  -->
+              <th scope="col">Sept2'23</th> 
+              <th scope="col">Sept1'23</th> 
+              <th scope="col">Aug2'23</th> 
+              <th scope="col">Aug1'23</th> 
+              <th scope="col">Jul2'23</th> 
+              <th scope="col">Jul1'23</th> 
               <th scope="col">June'22</th> 
              
             
@@ -295,6 +299,12 @@ margin-bottom: 12px; /* Add some space below the input */
                 <th scope="col">Reg No.</th>
               <th scope="col">Name</th>
               <th scope="col" style="text-align: center">Percentage</th>
+              <th scope="col">Sept2'23</th> 
+              <th scope="col">Sept1'23</th> 
+              <th scope="col">Aug2'23</th> 
+              <th scope="col">Aug1'23</th> 
+              <th scope="col">Jul2'23</th> 
+              <th scope="col">Jul1'23</th> 
               <th scope="col">June'22</th> 
               <th scope="col">May2'22</th> 
               <th scope="col">May1'22</th> 
