--- a/ADMIN/adminattendance.html
+++ b/ADMIN/adminattendance.html
@@ -122,7 +122,18 @@ margin-bottom: 12px; /* Add some space below the input */
                     <th scope="col">Name</th>
                     <th scope="col">Contact</th>
                     <th scope="col">Percentage</th>
+                    <th scope="col">Sept2'22</th> 
+                    <th scope="col">Sept1'22</th> 
+                    <th scope="col">Aug2'22</th> 
+                    <th scope="col">Aug1'22</th> 
+                    <th scope="col">Jul2'22</th> 
+                    <th scope="col">Jul1'22</th> 
+                    <th scope="col">June'22</th> 
+
+                    <th scope="col">May2'22</th> 
+                    <th scope="col">May1'22</th> 
                     <th scope="col">Apr2'22</th> 
+
                     <th scope="col">Apr1'22</th> 
                     <th scope="col">Mar2'22</th> 
                     <th scope="col">Mar1'22</th> 
@@ -213,6 +224,16 @@ margin-bottom: 12px; /* Add some space below the input */
                             <td>${data.name}</td>
                             <td>${data.contact}</td>
                             <td>${data.AAper}</td>
+                            <td>${data.Sept22b}</td>
+                            <td>${data.Sept22a}</td>
+                            <td>${data.Aug22b}</td>
+                            <td>${data.Aug22a}</td>
+                            <td>${data.Jul22b}</td>
+                            <td>${data.Jul22a}</td>
+                            <td>${data.Jun}</td>
+                            <td>${data.May2}</td>
+                            <td>${data.May1}</td>
+
                             <td>${data.Apr2}</td>
                             <td>${data.Apr1}</td>
                             <td>${data.Mar2}</td>
