--- a/MembersPanel/main.html
+++ b/MembersPanel/main.html
@@ -116,7 +116,7 @@
             <div class="modal-body">
 <labe>Enter your email : </labe>
               <input type="email" style="border: 1px solid rgb(79, 78, 78); padding: 5px; border-radius:5px" id="forgotEmail" placeholder="Email">
-              <div class="forgot">Your password reset link will be sent to your email address<span style="font-weight: 600;"> (SPAM FOLDER)</span>.</div>
+              <div class="forgot">Your password reset link has been sent to your email address<span style="font-weight: 600;"> (SPAM FOLDER)</span>.</div>
 
             </div>
             <div class="modal-footer">
