--- a/ADMIN/recruitments.html
+++ b/ADMIN/recruitments.html
@@ -93,8 +93,8 @@
     
 
         <div class="container-fluid" style="margin-top: 10px">
-          <h6 style="text-align: center;font-weight: bold;color: #ffffff;background-color: #4b4b4b;padding: 10px;">MEMBERS REGISTRATION (Design & Marketing)</h6>
-<p style="font-weight: bold;">Note:  <span style="font-weight: 600;color:red;font-style: italic">1-7 are old registrations</span></p>
+          <h6 style="text-align: center;font-weight: bold;color: #ffffff;background-color: #4b4b4b;padding: 10px;">MEMBERS REGISTRATION</h6>
+
             <div class="table-responsive custom-table-responsive">
     
                 <table class="table custom-table" id="myTable" style="color: black;">
