--- a/ADMIN/BoardAgreement.html
+++ b/ADMIN/BoardAgreement.html
@@ -278,7 +278,7 @@ input[type=submit] {
         <option value="Co-Founder(Administrative Head)">Co-Founder(Administrative Head)</option>
         <option value="Technical & Logistics Head">Technical & Logistics Head</option>
         <option value="Head of Operations(Internal)">Head of Operations(Internal)</option>
-        <option value="Head of Operations(Internal)">Head of Operations(Internal)</option>
+        <option value="Head of Operations(External)">Head of Operations(External)</option>
         <option value="Curation Head">Curation Head</option>
         <option value="Editorial Head">Editorial Head</option>
         <option value="PR Head">PR Head</option>
