--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="col">
       <div class="card">
-        <img src="assets/img/admin.jpg" class="card-img-top" alt="...">
+        <img src="assets/img/admin.png" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Admin Portal</h5>
           <p class="card-text"></p>
