--- a/interns/activities.html
+++ b/interns/activities.html
@@ -77,9 +77,9 @@
                                 <ul class="activity-list">
                                     <li>
                                         
-                                        <div class="activity-content">
+                                        <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a class="name">Mark your attendance before <span style="font-weight: 700;color: red;">15 June 2022</span></a>
+                                                <a class="name">Mark your attendance before <span style="font-weight: 700;color: red;">31st July 2022</span></a>
                                                
                                             </div>
                                         </div>
