--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="card">
         <img src="assets/img/member.jpg" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Members Portal</h5>
+          <h5 class="card-title">Member Portal</h5>
           <p class="card-text"></p>
           <a href="./MembersPanel/main.html" style="width: 120px" class="btn btn-success">Login</a>
         </div>
@@ -101,12 +101,26 @@
       <div class="card">
         <img src="assets/img/admin.png" class="card-img-top" alt="...">
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Admin Portal</h5>
+          <h5 class="card-title">Board Portal</h5>
           <p class="card-text"></p>
-          <a href="./ADMIN/main.html" style="width: 120px" class="btn btn-danger">Login</a>
+          <a href="./Board/main.html" style="width: 120px" class="btn btn-primary">Login</a>
         </div>
       </div>
     </div>
+
+
+    <div class="col">
+      <div class="card">
+        <img src="assets/img/superadmin.png" class="card-img-top" alt="...">
+        <div class="card-body" style="text-align: center">
+          <h5 class="card-title">Admin Portal</h5>
+          <p class="card-text"></p>
+          <a href="./Admin/main.html" style="width: 120px" class="btn btn-danger">Login</a>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
 </div>
