--- a/Admin/main.html
+++ b/Admin/main.html
@@ -185,13 +185,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyDoiXHxMG_vZPHz0eeJj5s661xhfU-Y4_4",
-    authDomain: "members-76725.firebaseapp.com",
-    projectId: "members-76725",
-    storageBucket: "members-76725.appspot.com",
-    messagingSenderId: "734645197873",
-    appId: "1:734645197873:web:808127fdb4d643d4d24910",
-    measurementId: "G-7LYZ3R48GT"
+  apiKey: "AIzaSyCBBs270ozv0lwCWo6MkvE_f-ztr9jUgRI",
+  authDomain: "admin-1c178.firebaseapp.com",
+  projectId: "admin-1c178",
+  storageBucket: "admin-1c178.appspot.com",
+  messagingSenderId: "489508210582",
+  appId: "1:489508210582:web:2676437dc7bd72677e7fb7",
+  measurementId: "G-VQM4WX6QNW"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
