--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Admin Portal</h5>
           <p class="card-text"></p>
-          <a href="./Admin/index.html" style="width: 120px" class="btn btn-danger">Login</a>
+          <a href="https://adminportal.wakewithwellness.in/" style="width: 120px" class="btn btn-danger">Login</a>
         </div>
       </div>
     </div>
