--- a/Board/finance.html
+++ b/Board/finance.html
@@ -190,7 +190,7 @@ margin-bottom: 12px; /* Add some space below the input */
                   <table class="table custom-table" id="myTable2" style="color: rgb(0, 0, 0);">
                       <thead>
                           <tr style="background-color: #5793D1;color: #fff;"> 
-                            <th scope="col">Purpose</th>
+                            <th scope="col">Date</th>
                           <th scope="col">Total Amount</th>
                           
                         
