--- a/Board/members.html
+++ b/Board/members.html
@@ -193,7 +193,7 @@ margin-bottom: 12px; /* Add some space below the input */
                        <th scope="col">Photo</th>
                     <th scope="col">Name</th>
                     <th scope="col">Email</th>
-                    <th scope="col" style="min-width:12vh">Contact</th>
+                    <th scope="col">Contact</th>
                     <th scope="col">Whatsapp</th>
                     <th scope="col">Department</th>
                     <th scope="col">Dept II</th>
@@ -316,7 +316,7 @@ margin-bottom: 12px; /* Add some space below the input */
                             <td>${data.name}</td>
                             <td><a style="color: blue" href="mailto:${data.email}">${data.email}</a></td>
                             <td><a style="color: green; font-weight: bold; font-size: 15px" href="tel:${data.phone}"><i class="fa fa-phone" aria-hidden="true"></i> ${data.phone}</a></td>
-                            <td><a style="color: green; font-weight: bold; font-size: 15px" target="_blank" href="https://wa.me/${data.whatsapp}"><i class="fa fa-whatsapp" aria-hidden="true"></i> ${data.whatsapp}</a></td>
+                            <td><a style="color: green; font-weight: bold; font-size: 15px;" href="https://wa.me/${data.whatsapp}"><i class="fa fa-whatsapp" aria-hidden="true"></i> ${data.whatsapp}</a></td>
                             <td>${data.department}</td>
                             <td>${data.department2}</td>
                             <td>${data.college}</td>
