--- a/Board/members.html
+++ b/Board/members.html
@@ -269,7 +269,7 @@ margin-bottom: 12px; /* Add some space below the input */
                         <th scope="row">
                           <label style="font-size:10px;text-align:center">${data.regno}</label>
                         </th>
-                        <td ><img alt="Not available" onclick="location.href='${data.link}'" src="${data.link}" style="width: 7vh; height: 7vh; object-fill: cover;cursor:pointer"></td>
+                        <td ><img alt="Not available" onclick="location.href='${data.link}'" src="${data.link}" style="width: 7vh; height: 7vh; object-fit: cover;cursor:pointer"></td>
                             <td style="font-size:10px">${data.name}</td>
                             <td style="font-size:10px"><a style="color: blue" href="mailto:${data.email}">${data.email}</a></td>
                             <td style="font-size:10px"><a style="color: green; font-weight: bold; font-size: 11px" href="tel:${data.phone}"><i class="fa fa-phone" aria-hidden="true"></i> ${data.phone}</a></td>
