--- a/Board/recruitments.html
+++ b/Board/recruitments.html
@@ -153,13 +153,14 @@
   <script id="MainScript">
       //Connection
         var firebaseConfig = {
-            apiKey: "AIzaSyBTOvD0aod-fntZ0VYbT6EAp9z1L_bqKwY",
-            authDomain: "website-818ed.firebaseapp.com",
-            projectId: "website-818ed",
-            storageBucket: "website-818ed.appspot.com",
-            messagingSenderId: "542030860652",
-            appId: "1:542030860652:web:ee0bef0509915aa1da2349",
-            measurementId: "G-2VWCQ9QR4S"
+           apiKey: "AIzaSyDoiXHxMG_vZPHz0eeJj5s661xhfU-Y4_4",
+  authDomain: "members-76725.firebaseapp.com",
+  databaseURL: "https://members-76725-default-rtdb.firebaseio.com",
+  projectId: "members-76725",
+  storageBucket: "members-76725.appspot.com",
+  messagingSenderId: "734645197873",
+  appId: "1:734645197873:web:808127fdb4d643d4d24910",
+  measurementId: "G-7LYZ3R48GT"
         };
 
         //Init Firebase
