--- a/Board/leavepanel.html
+++ b/Board/leavepanel.html
@@ -94,7 +94,7 @@
 
   <div class="topnav" style="width: 100%;">
     <div>
-     <img src="assets/img/logoonly.png" style="width: 160px;float: left;padding: 10px;">
+     <img src="../assets/img/logoonly.png" style="width: 160px;float: left;padding: 10px;">
     </div> 
   </div> 
 
