--- a/Board/leavepanel.html
+++ b/Board/leavepanel.html
@@ -114,7 +114,7 @@
                 <thead>
                     <tr style="background-color: #5793D1;color: #fff;"> 
                    
-                    <th scope="col" style="max-width: 15px">Action</th>
+                    <th scope="col">Action</th>
                     <th scope="col">S No.</th> 
                     <th scope="col">Name</th>
                     <th scope="col">Reason</th>
