--- a/Board/members.html
+++ b/Board/members.html
@@ -191,7 +191,8 @@ margin-bottom: 12px; /* Add some space below the input */
                     <tr style="background-color: #5793D1;color: #fff"> 
                       <th scope="col">Reg No.</th>
                        <th scope="col">Photo</th>
-                    <th scope="col">Name</th>
+                       <th scope="col">Status</th> 
+                       <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Contact</th>
                     <th scope="col">Whatsapp</th>
@@ -203,6 +204,7 @@ margin-bottom: 12px; /* Add some space below the input */
                     <th scope="col">Address</th> 
                     <th scope="col">Pincode</th> 
                     <th scope="col">State</th> 
+                   
                     <th scope="col" style="font-size:9px;text-align:center">Agreement</th> 
                     <th scope="col" style="font-size:9px;text-align:center">IDCard</th> 
                     <th scope="col" style="font-size:9px;text-align:center">Certificate</th> 
@@ -270,9 +272,10 @@ margin-bottom: 12px; /* Add some space below the input */
                           <label style="font-size:10px;text-align:center">${data.regno}</label>
                         </th>
                         <td ><img alt="Not available" onclick="location.href='${data.link}'" src="${data.link}" style="width: 7vh; height: 7vh; object-fit: cover;cursor:pointer"></td>
-                            <td style="font-size:10px">${data.name}</td>
+                        <td style="color: ${data.ccolor};font-size:12px;font-weight:bold">${data.status}</td>
+                         <td style="font-size:10px">${data.name}</td>
                             <td style="font-size:10px"><a style="color: blue" href="mailto:${data.email}">${data.email}</a></td>
-                            <td style="font-size:10px"><a style="color: green; font-weight: bold; font-size: 11px" href="tel:${data.phone}"><i class="fa fa-phone" aria-hidden="true"></i> ${data.phone}</a></td>
+                            <td style="font-size:10px"><a style="color: green; font-weight: bold; font-size: 11px" href="tel:${data.phone}"><i class="fa fa-phone" aria-hidden="true"></i>${data.phone}</a></td>
                             <td style="font-size:10px"><a style="color: green; font-weight: bold; font-size: 11px;" href="https://wa.me/${data.whatsapp}">${data.whatsapp}</a></td>
                             <td style="font-size:10px">${data.department}</td>
                             <td style="font-size:10px">${data.department2}</td>
@@ -282,6 +285,7 @@ margin-bottom: 12px; /* Add some space below the input */
                             <td style="font-size:10px">${data.address}</td>
                             <td style="font-size:10px">${data.pincode}</td>
                             <td style="font-size:10px">${data.state}</td>
+                          
                             <td style="text-align:center"><a style="color: #0090c4;font-size:18px;" href="${data.agreement}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
                             <td style="text-align:center"><a style="color: #e6870b;font-size:18px;" href="${data.idcard}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
                             <td style="text-align:center"><a style="color: #27a317;font-size:18px;" href="${data.certificate}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
