--- a/Board/members.html
+++ b/Board/members.html
@@ -286,9 +286,9 @@ margin-bottom: 12px; /* Add some space below the input */
                             <td style="font-size:10px">${data.pincode}</td>
                             <td style="font-size:10px">${data.state}</td>
                           
-                            <td style="text-align:center"><a style="color: #0090c4;font-size:18px;" href="${data.agreement}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
-                            <td style="text-align:center"><a style="color: #e6870b;font-size:18px;" href="${data.idcard}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
-                            <td style="text-align:center"><a style="color: #27a317;font-size:18px;" href="${data.certificate}"><i class="fa fa-download" aria-hidden="true"></i></a></td>
+                            <td style="text-align:center"><a style="color: #0090c4;font-size:18px;" href="${data.agreement}"><i class="fa fa-eye" aria-hidden="true"></i></a></td>
+                            <td style="text-align:center"><a style="color: #e6870b;font-size:18px;" href="${data.idcard}"><i class="fa fa-eye" aria-hidden="true"></i></a></td>
+                            <td style="text-align:center"><a style="color: #27a317;font-size:18px;" href="${data.certificate}"><i class="fa fa-eye" aria-hidden="true"></i></a></td>
                       </tr>`;
             let table = document.getElementById('myTable')
             table.innerHTML += row
