--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -203,7 +203,7 @@ margin-bottom: 12px; /* Add some space below the input */
 
 
 
-
+<p>Last percentage updated on <span style="color: red; font-style:italic">1st August 2022</span></p>
 
 <div class="first1 batch">
   <div class="table-responsive custom-table-responsive">
@@ -268,9 +268,9 @@ margin-bottom: 12px; /* Add some space below the input */
                 <th scope="col">Reg No.</th>
               <th scope="col">Name</th>
               <th scope="col" style="text-align: center">Percentage</th>
-              <!-- <th scope="col">Sept2'22</th> 
+             <th scope="col">Sept2'22</th> 
               <th scope="col">Sept1'22</th> 
-              <th scope="col">Aug2'22</th>  -->
+              <th scope="col">Aug2'22</th> 
               <th scope="col">Aug1'22</th> 
               <th scope="col">Jul2'22</th> 
               <th scope="col">Jul1'22</th> 
@@ -300,9 +300,9 @@ margin-bottom: 12px; /* Add some space below the input */
                 <th scope="col">Reg No.</th>
               <th scope="col">Name</th>
               <th scope="col" style="text-align: center">Percentage</th>
-              <!-- <th scope="col">Sept2'22</th> 
+              <th scope="col">Sept2'22</th> 
               <th scope="col">Sept1'22</th> 
-              <th scope="col">Aug2'22</th>  -->
+              <th scope="col">Aug2'22</th>  
               <th scope="col">Aug1'22</th> 
               <th scope="col">Jul2'22</th> 
               <th scope="col">Jul1'22</th> 
@@ -339,9 +339,9 @@ margin-bottom: 12px; /* Add some space below the input */
                 <th scope="col">Reg No.</th>
               <th scope="col">Name</th>
               <th scope="col" style="text-align: center">Percentage</th>
-              <!-- <th scope="col">Sept2'22</th> 
+             <th scope="col">Sept2'22</th> 
               <th scope="col">Sept1'22</th> 
-              <th scope="col">Aug2'22</th>  -->
+              <th scope="col">Aug2'22</th>
               <th scope="col">Aug1'22</th> 
               <th scope="col">Jul2'22</th> 
        
@@ -357,12 +357,7 @@ margin-bottom: 12px; /* Add some space below the input */
 </div>
 
 
-
-
-
-
-
-        
+   
     </div>
 
 </main>
