--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -203,7 +203,7 @@ margin-bottom: 12px; /* Add some space below the input */
 
 
 
-<p>Last percentage updated on <span style="color: red; font-style:italic">1st August 2022</span></p>
+<p>Last percentage updated on <span style="color: red; font-style:italic">27th August 2022</span></p>
 
 <div class="first1 batch">
   <div class="table-responsive custom-table-responsive">
