--- a/MembersPanel/attendance.html
+++ b/MembersPanel/attendance.html
@@ -56,7 +56,7 @@
      }
 
      button {
-     width: 150px;
+     width: 100%;
      padding: 10px;
      border: none;
      -webkit-border-radius: 5px; 
@@ -66,6 +66,9 @@
      font-size: 16px;
      color: #fff;
      cursor: pointer;
+
+
+     
      }
      button:hover {
      background-color: #0666a3;
@@ -83,6 +86,11 @@
      margin-top: 10px;
      display: none;
    }
+
+
+
+   
+  
 
 
      @media (min-width: 568px) {
