--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -18,7 +18,7 @@
   
 </head>
 
-<body  style="background-color: black;">
+<body>
     <div class="main-wrapper">
         <div class="header">
 			<div class="header-left">
