--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -16,7 +16,7 @@
    
 </head>
 
-<body style="background-color: black;">
+<body>
     <div class="main-wrapper">
         <div class="header">
 			<div class="header-left">
@@ -44,6 +44,10 @@
                        </li>
                        <li>
                         <a href="attendance.html"><i class="fa fa-calendar-check-o"></i> <span>Attendance</span></a>
+                       </li>
+
+                       <li>
+                        <a href="attenUpdates.html"><i class="fa fa-pencil"></i> <span>Attendance Updates</span></a>
                        </li>
                   
                        <li>
@@ -103,7 +107,7 @@
                                     <li>
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a class="name"><i  class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 30th August 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 31st July 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
