--- a/MembersPanel/payments.html
+++ b/MembersPanel/payments.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,7 +16,8 @@
 
 </head>
 
-<body style="background-color: black;">
+
+<body style="background-color: rgb(238, 238, 238)">
 
 
     <div class="topnav" style="width: 100%;">
