--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -21,7 +21,7 @@
         <div class="header">
 			<div class="header-left">
 				<a href="index.html" class="logo">
-					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
+					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Members Portal</span>
 				</a>
 			</div>
 			<a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
@@ -107,7 +107,7 @@
                                     <li>
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 31st July 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 15th August 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
