--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -143,10 +143,10 @@
                             <thead style="background-color: #f7f7f7">
                                     <tr style="text-align: left;"> 
                                     <th scope="col">SNo.</th> 
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Reason</th>
-                                    <th scope="col">From</th>
-                                    <th scope="col">To</th>
+                                    <th scope="col" style="min-width: 22vh">Name</th>
+                                    <th scope="col" style="min-width: 20vh">Reason</th>
+                                    <th scope="col" style="min-width: 18vh">From</th>
+                                    <th scope="col" style="min-width: 18vh">To</th>
                                     <th scope="col">Status</th>
                                     
             
