--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -107,7 +107,7 @@
                                     <li>
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 15th September 2022</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 31st August 2022</span></a> 
                                             </div>
                                         </div>
                                     </li>
