--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   <style>
 
 
+
+@media (min-width: 1402px) {
+  body {
+	overflow-y: hidden;
+	
+}
+}
    /*Scrollbar*/
    /* width */
    ::-webkit-scrollbar {
@@ -69,58 +76,104 @@
 
 <!-- ======= Header ======= -->
 <!-- End Header -->
-
+<div class="container" style="margin-top: 70px;text-align: center;">
+  <h3 style="font-weight: bold;color: #0270d6">Wake With Wellness Portal</h3>
+  <p style="font-size:14px; color:grey; margin-top:-5px"><span style="font-weight: 500">Wake With Wellness</span> is a Community Based Organization registered under <span style="font-weight: 500">UNITED NATIONS</span> with a vision of steering people for a hale and hearty life form, <span style="font-weight: 500">‘We Are People Caring For People’</span> </p>
+</div>
  
-<div class="container" style="margin-top: 90px">
+<div class="container my-2" >
   <div class="row">
   
-    <div class="col">
-      <div class="card">
-        <img src="assets/img/member.jpg" class="card-img-top" alt="...">
+    <div class="col" >
+      <div class="card" style="background-color: #fff;border-top: 3px solid #198754">
+        <h1 style="text-align: center;"><img src="assets/img/member.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Member Portal</h5>
           <p class="card-text"></p>
-          <a href="./MembersPanel/main.html" style="width: 120px" class="btn btn-success">Login</a>
+          <a href="./MembersPanel/main.html" style="width: 120px; background-color:  #198754;color: #fff" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
 
     <div class="col">
-      <div class="card">
-        <img src="assets/img/intern.jpg" class="card-img-top" alt="...">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #ffc107">
+        <h1 style="text-align: center;"><img src="assets/img/intern.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Interns Portal</h5>
           <p class="card-text"></p>
-          <a href="./interns/main.html" style="width: 120px" class="btn btn-warning">Login</a>
+          <a href="./interns/main.html" style="width: 120px; background-color: #ffc107;color: #fff" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
 
 
     <div class="col">
-      <div class="card">
-        <img src="assets/img/admin.png" class="card-img-top" alt="...">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #5793D1">
+        <h1 style="text-align: center;"><img src="assets/img/admin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Board Portal</h5>
           <p class="card-text"></p>
-          <a href="./Board/main.html" style="width: 120px" class="btn btn-primary">Login</a>
+          <a href="./Board/main.html" style="width: 120px" class="btn btn-primary"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
 
 
     <div class="col">
-      <div class="card">
-        <img src="assets/img/superadmin.png" class="card-img-top" alt="...">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #5793D1">
+        <h1 style="text-align: center;"><img src="assets/img/superadmin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
           <h5 class="card-title">Admin Portal</h5>
           <p class="card-text"></p>
-          <a href="https://adminportal.wakewithwellness.in/" style="width: 120px" class="btn btn-danger">Login</a>
+          <a href="./Admin/index.html" style="width: 120px" class="btn btn-danger"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
 
 
+  </div>
+
+</div>
+
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-lg">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #353535">
+         <div class="content" style="background-color: rgb(229, 229, 229); padding: 10px; ">
+          <h5 style="font-weight: 600">Spotlight</h5>
+        </div>
+        <div class="content" style="padding: 10px; text-align:justify;font-size:12px;text-transform:uppercase">
+          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">15th September</span></a></p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-lg">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #353535">
+        <div class="content" style="background-color: rgb(229, 229, 229); padding: 10px">
+          <h5 style="font-weight: 600">Wake With Wellness, India</h5>
+        </div>
+        <div class="content" style="padding: 10px; text-align:justify;font-size:12px">
+          <p><i class="fa fa-certificate" aria-hidden="true"></i> Wake With Wellness is a community based organization established to exercise good actions for the
+            rehabilitation of communities regarding health and social awareness without ascertaining the foundations of
+            legal norms. We’ll create health awareness campaigns that will include posters, content creation, interactive
+            sessions and imparting information that can increase the awareness of people in the country about palliative
+            and health care</p>
+
+            <p><i class="fa fa-certificate" aria-hidden="true"></i> To improve the attitude of the community about delivery of palliative and health care services, more
+              sustained efforts are required to make them believe that palliative and health care can be provided by
+              community volunteers also and not necessarily only by professionals. Thus the only way to provide
+              palliative and health care to a huge number of people in need is through community participation. With this
+              vision of steering people for a hale and hearty life form, ‘we are people caring for people’ Be a part of
+              this welfare operation by undertaking the pledge to serve people and generations.</p>
+        </div>
+      </div>
+    </div>
+
+  
   </div>
 
 </div>
