--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         </div>
         <div class="content" style="padding: 10px; text-align:justify;font-size:12px;text-transform:uppercase">
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">15th September</span></a></p>
+          <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/myupdates.html"> Check attendance updates with details</a></p>
         </div>
       </div>
     </div>
