--- a/Board/attenUpdates.html
+++ b/Board/attenUpdates.html
@@ -200,6 +200,7 @@ margin-bottom: 12px; /* Add some space below the input */
                                     <tr style="background-color: #5793D1;color: #fff;"> 
                                       <th scope="col">Reg No.</th>
                                     <th scope="col">Name</th>
+                                    <th scope="col">Status</th>
                                     <th scope="col">Sept2'22</th> 
                                     <th scope="col">Sept1'22</th> 
                                     <th scope="col">Aug2'22</th> 
