--- a/MembersPanel/myupdates.html
+++ b/MembersPanel/myupdates.html
@@ -19,6 +19,13 @@
 <style>
       tr:nth-child(even) {background-color: #f2f2f2;}
      tr:hover {background-color: rgb(231, 231, 231);}
+
+
+     #month{
+      /* transform: rotate(-40deg); */
+      margin-top:20px;
+      color: cornflowerblue;
+     }
     
 </style>
 
