--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -220,7 +220,7 @@ margin-bottom: 12px; /* Add some space below the input */
           <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #5793D1;padding: 20px">
                 <div class="row">
                   <div class="col-sm-12">
-                      <h4 class="page-title">Attendance Updates <a href="myupdates.html" style="font-size:12px;cursor: pointer;">[ <i class="fa fa-pencil-square-o" aria-hidden="true"></i> My Updates ]</a></h4><hr>
+                      <h4 class="page-title">Attendance Updates <a href="myupdates.html" style="font-size:12px;cursor: pointer;color:red;font-weight:bold">[ <i class="fa fa-pencil-square-o" aria-hidden="true"></i> My Updates ]</a></h4><hr>
                   </div>
                 </div>
               
