--- a/MembersPanel/main.html
+++ b/MembersPanel/main.html
@@ -94,7 +94,7 @@
   </div>
 
 
-  <div class="header">
+  <div class="header"  style="background-color: #198754;">
     <div class="header-left">
       <a class="logo" style="margin-left: -15px;">
         <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Members Portal</span>
