--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -20,7 +20,7 @@
 
 <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-        <div class="header">
+        <div class="header" style="background-color: #198754;">
 			<div class="header-left">
 				<a href="main.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Members Portal</span>
@@ -122,12 +122,12 @@
           <br> 
 
           <div style="float: right; margin-right:15px">
-            <a onclick="FillTboxes(null)" type="button" data-toggle="modal" data-target="#exampleModalCenter" style="cursor:pointer;background-color:#009efb;padding:10px;color:white;border-radius: 4px"> <i class="fa fa-plus"></i> Add Leave</a>
+            <a onclick="FillTboxes(null)" type="button" data-toggle="modal" data-target="#exampleModalCenter" style="cursor:pointer;background-color:#198754;padding:10px;color:white;border-radius: 4px"> <i class="fa fa-plus"></i> Add Leave</a>
         
           </div>
 
 
-              <div class="content"  style="background-color: #fff;margin: 15px;border-top: 3px solid #5793D1">
+              <div class="content"  style="background-color: #fff;margin: 15px;border-top: 3px solid #198754">
                 <div class="row">
                   <div class="col-sm-12">
                       <h4 class="page-title">Leave Request</h4>
