--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="main-wrapper">
-        <div class="header">
+        <div class="header" style="background-color: #198754;">
 			<div class="header-left">
 				<a href="index.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Members Portal</span>
@@ -116,7 +116,7 @@
                                     <li>
                                         <div class="activity-content" onclick="location.href='myupdates.html'" style="cursor: pointer">
                                             <div class="timeline-content">
-                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check your attendance updates details. <span style="color: rgb(0, 145, 255)">Click here</span></a> 
+                                                <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check your attendance updates details. <span style="color: #198754">Click here</span></a> 
                                             </div>
                                         </div>
                                     </li>
