--- a/MembersPanel/employees.html
+++ b/MembersPanel/employees.html
@@ -34,7 +34,7 @@
 
 <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-        <div class="header">
+        <div class="header" style="background-color: #198754;">
 			<div class="header-left">
 				<a href="main.html" class="logo">
 					<img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Members Portal</span>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="page-wrapper">
-            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #5793D1;padding: 20px">
+            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #198754;padding: 20px">
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="page-title">Member List</h4><hr>
