--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <div class="header">
     <div class="header-left">
-      <a class="logo">
+      <a class="logo" style="float:left;">
         <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
       </a>
     </div>
