--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -217,7 +217,7 @@ margin-bottom: 12px; /* Add some space below the input */
           </div>
       </div>
       <div class="page-wrapper">
-          <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #198754;padding: 20px">
+          <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #198754;padding: 20px;border-radius: 5px;">
                 <div class="row">
                   <div class="col-sm-12">
                       <h4 class="page-title">Attendance Updates <a href="myupdates.html" style="color:#198754;font-size:12px;cursor: pointer;font-weight:bold">[ <i class="fa fa-pencil-square-o" aria-hidden="true"></i> My Updates ]</a></h4><hr>
