--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -104,7 +104,7 @@
                                    
 
 
-                                    <li>
+                                    <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='attendance.html'" style="cursor: pointer">
                                             <div class="timeline-content">
                                                 <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Mark your attendance before <span style="font-weight: 700;color: red;"> 15th September 2022</span></a> 
@@ -113,7 +113,7 @@
                                     </li>
 
 
-                                    <li>
+                                    <li style="border-color: #198754;border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='myupdates.html'" style="cursor: pointer">
                                             <div class="timeline-content">
                                                 <a style="color: rgb(67, 67, 67)" class="name"><i class="fa fa-certificate" aria-hidden="true"></i> Check your attendance updates details. <span style="color: #198754">Click here</span></a> 
