--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -16,7 +16,7 @@
    
 </head>
 
-<body>
+<body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
         <div class="header" style="background-color: #198754;">
 			<div class="header-left">
@@ -87,10 +87,11 @@
 
 
         <div class="page-wrapper">
-            <div class="content">
+            <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #198754;padding: 20px;border-radius: 5px;">
+
                 <div class="row">
                     <div class="col-sm-12">
-                        <h4 class="page-title">Notifications</h4>
+                        <h4 class="page-title">Notifications</h4><hr>
                     </div>
                 </div>
                 <div class="row">
