--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -145,8 +145,8 @@
                                     <th scope="col">SNo.</th> 
                                     <th scope="col" style="min-width: 22vh">Name</th>
                                     <th scope="col" style="min-width: 20vh">Reason</th>
-                                    <th scope="col" style="min-width: 18vh">From</th>
-                                    <th scope="col" style="min-width: 18vh">To</th>
+                                   <th scope="col" style="min-width: 20vh">From<span style="font-size:10px;color:grey"> [YYYY-MM-DD]</span></th>
+                                    <th scope="col" style="min-width: 18vh">To<span style="font-size:10px;color:grey"> [YYYY-MM-DD]</span></th>
                                     <th scope="col">Status</th>
                                     
             
