--- a/Board/main.html
+++ b/Board/main.html
@@ -16,7 +16,7 @@
   
             
 </head>
-<body  style="overflow-x: hidden;background-color: white;">
+<body  style="overflow-x: hidden;background-color: rgb(238, 238, 238)">
 
   <div class="topnav" style="width: 100%;">
    
