--- a/Board/main.html
+++ b/Board/main.html
@@ -30,7 +30,7 @@
   </div>
 
 
-  <div class="header">
+  <div class="header" style="background-color: #0d6efd;">
     <div class="header-left">
       <a class="logo" style="margin-left: -15px;">
         <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
