--- a/interns/main.html
+++ b/interns/main.html
@@ -53,7 +53,7 @@
   
             
 </head>
-<body  style="overflow-x: hidden;">
+<body  style="overflow-x: hidden;background-color: rgb(238, 238, 238)">
 
   <div class="topnav" style="width: 100%;">
    
@@ -67,7 +67,7 @@
   </div>
 
 
-  <div class="header">
+  <div class="header" style="background-color: #ffc107;">
     <div class="header-left">
       <a class="logo" style="margin-left: -15px;">
         <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Interns Portal</span>
