--- a/Board/main.html
+++ b/Board/main.html
@@ -33,7 +33,7 @@
   <div class="header" style="background-color: #0d6efd;">
     <div class="header-left">
       <a class="logo" style="margin-left: -15px;">
-        <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
+        <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>Boards Portal</span>
       </a>
     </div>
     <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
