--- a/Board/main.html
+++ b/Board/main.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="../MembersPanel/assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../MembersPanel/assets/css/style.css">
    
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
     <style>
       .alert{
             text-align: center;
@@ -105,6 +107,17 @@
           </div>
       </div>
 
+
+
+       <!--Code of ethics modal -->
+       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="padding: 10px; max-width: 120vh;max-height: 81vh;overflow-y:visible;">
+              <object data=
+              "https://firebasestorage.googleapis.com/v0/b/website-818ed.appspot.com/o/CodeofEthics.pdf?alt=media&token=6af5a5ee-3079-45f1-a14e-0b35ccafe36c" 
+              style="width:100%; height:100%"> 
+              </object>
+       </div>
+       <!--Code of ethics modal-->
+
       
     <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -134,7 +147,11 @@
 
   <div id="logindata"></div>
          
- 
+  
+
+
+
+
     <!--edit profile -->
   <div id="modal3" class="modal" style="padding: 10px; max-width: 120vh;max-height: 81vh;overflow-y:visible;">
     <div class="modal-content">
@@ -248,6 +265,13 @@
       </div>
     </div>
   </div> 
+
+
+
+
+
+
+
 
 
  
