--- a/Board/main.html
+++ b/Board/main.html
@@ -110,7 +110,7 @@
 
 
        <!--Code of ethics modal -->
-       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="padding: 10px; max-width: 120vh;max-height: 81vh;overflow-y:visible;">
+       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="max-width: 120vh;max-height: 81vh;overflow-y:hidden">
               <iframe src=
               "https://firebasestorage.googleapis.com/v0/b/website-818ed.appspot.com/o/CodeofEthics.pdf?alt=media&token=6af5a5ee-3079-45f1-a14e-0b35ccafe36c" 
               style="width:100%; height:100%"> 
