--- a/index.html
+++ b/index.html
@@ -32,28 +32,7 @@
 	
 }
 }
-   /*Scrollbar*/
-   /* width */
-   ::-webkit-scrollbar {
-     width: 10px;
-   }
-   
-   /* Track */
-   ::-webkit-scrollbar-track {
-     background: #2e2e2e00;
-   }
-   
-   /* Handle */
-   ::-webkit-scrollbar-thumb {
-     background: rgb(207, 207, 207);
-   }
-   
-   /* Handle on hover */
-   ::-webkit-scrollbar-thumb:hover {
-     background: rgb(185, 185, 185);
-   }
-
-   
+ 
      </style>
 
 </head>
@@ -77,7 +56,7 @@
 <!-- ======= Header ======= -->
 <!-- End Header -->
 <div class="container" style="margin-top: 68px;text-align: center;">
-  <h3 style="font-weight: bold;color: #0270d6">Wake With Wellness Portal</h3>
+  <h3 style="color: #0270d6; font-weight: bold;font-size:19px">Wake With Wellness Portal</h3>
   <p style="font-size:14px; color:grey; margin-top:-5px"><span style="font-weight: 500">Wake With Wellness</span> is a Community Based Organization registered under <span style="font-weight: 500">UNITED NATIONS</span> with a vision of steering people for a hale and hearty life form, <span style="font-weight: 500">‘We Are People Caring For People’</span> </p>
 </div>
  
@@ -88,7 +67,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #198754">
         <h1 style="text-align: center;"><img src="assets/img/member.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Member Portal</h5>
+          <h5 class="card-title" style="color: #198754">Member Portal</h5>
           <p class="card-text"></p>
           <a href="./MembersPanel/main.html" style="width: 120px; background-color:  #198754;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -99,8 +78,8 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #ffc107">
         <h1 style="text-align: center;"><img src="assets/img/intern.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Interns Portal</h5>
-          <p class="card-text"></p>
+          <h5 class="card-title" style="color: #ffc107">Interns Portal</h5>
+          <p class="card-text" ></p>
           <a href="./interns/main.html" style="width: 120px; background-color: #ffc107;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
@@ -111,7 +90,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #0d6efd">
         <h1 style="text-align: center;"><img src="assets/img/admin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Board Portal</h5>
+          <h5 class="card-title" style="color: #0d6efd">Board Portal</h5>
           <p class="card-text"></p>
           <a href="./Board/main.html" style="width: 120px; background-color: #0d6efd; color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -123,7 +102,7 @@
       <div class="card" style="background-color: #fff;border-top: 3px solid #dc3545">
         <h1 style="text-align: center;"><img src="assets/img/superadmin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title">Admin Portal</h5>
+          <h5 class="card-title" style="color: #dc3545">Admin Portal</h5>
           <p class="card-text"></p>
           <a href="https://adminportal.wakewithwellness.in" style="width: 120px; background-color: #dc3545; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
@@ -184,7 +163,7 @@
          <div class="content" style="background-color: rgb(229, 229, 229); padding: 10px; ">
           <h5 style="font-weight: 600">Spotlight</h5>
         </div>
-        <div class="content" style="padding: 10px; text-align:justify;font-size:12px;text-transform:uppercase">
+        <div class="content" style="padding: 10px; text-align:left;font-size:12px;text-transform:uppercase">
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/attendance.html"> Mark your attendance before <span style="color: red; font-weight:500">15th September</span></a></p>
           <p><i class="fa fa-hand-o-right" aria-hidden="true"></i> <a  style="color: rgb(109, 109, 109)" href="MembersPanel/myupdates.html"> Check attendance updates with details</a></p>
         </div>
