--- a/MembersPanel/employees.html
+++ b/MembersPanel/employees.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-       <style>
+    <style>
         #myInput {
       background-image: url('/css/searchicon.png'); /* Add a search icon to input */
       background-position: 10px 12px; /* Position the search icon */
@@ -234,6 +234,43 @@ function myFunction() {
   }
 }
 </script>
+
+
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+<script src="./scripts/auth.js"></script>
+<script>
+
+      // Your web app's Firebase configuration
+var firebaseConfig = {
+apiKey: "AIzaSyDoiXHxMG_vZPHz0eeJj5s661xhfU-Y4_4",
+authDomain: "members-76725.firebaseapp.com",
+projectId: "members-76725",
+storageBucket: "members-76725.appspot.com",
+messagingSenderId: "734645197873",
+appId: "1:734645197873:web:808127fdb4d643d4d24910",
+measurementId: "G-7LYZ3R48GT"
+};
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+
+
+    const auth=firebase.auth();
+    const database=firebase.database();
+
+
+firebase.auth().onAuthStateChanged(function(user) {
+if (user) {
+// User is signed in.
+} else {
+window.location.href = './main.html'; 
+}
+});
+</script>
+
+
+
 </body>
 
 </html>
