--- a/MembersPanel/agreement.html
+++ b/MembersPanel/agreement.html
@@ -213,7 +213,7 @@
                               </div><hr>
                               <div class="alert"><i class="fa fa-check-circle" aria-hidden="true"></i> Agreement submitted successfully</div>
                             <div class="text-center">
-                                <input type="submit" id="submit" value="Submit" style="width: 30vh" class="btn btn-primary">
+                                <input type="submit" id="submit" value="Submit" style="width: 30vh;height: 6vh" class="btn btn-primary">
                             </div>
                         </form>
                     </div>
