--- a/MembersPanel/agreement.html
+++ b/MembersPanel/agreement.html
@@ -23,10 +23,11 @@
     padding: 15px;
     background:#79c879;
     color: white;
-    height:7vh;
+    font-size: 13.5px;
+    height:auto;
     margin-bottom: 10px;
     margin-top: 10px;
-    display: none;
+   
     
   }
 
