--- a/MembersPanel/agreement.html
+++ b/MembersPanel/agreement.html
@@ -23,12 +23,11 @@
     padding: 15px;
     background:#79c879;
     color: white;
-    font-size: 13.5px;
+    font-size: 14px;
     height:auto;
     margin-bottom: 10px;
     margin-top: 10px;
-   
-    
+    display: none;     
   }
 
   .form-control{
