--- a/MembersPanel/agreement.html
+++ b/MembersPanel/agreement.html
@@ -43,7 +43,7 @@
 
 <body style="background-color: rgb(238, 238, 238)" oncontextmenu="return false">
 
-            <div class="header">
+            <div class="header" style="background-color: #333333">
               <div class="header-left">
                 <a class="logo" style="float:left;">
                   <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
@@ -54,8 +54,8 @@
 
 
 
-        <div class="container-fluid" style="margin-top:12vh">
-            <div class="content" style="background-color: #fff;border-top: 3px solid cornflowerblue;padding: 15px;border-radius: 5px;">
+        <div class="container-fluid" style="margin-top:9vh">
+            <div class="content" style="background-color: #fff;border-top: 3px solid #333333;padding: 15px;border-radius: 5px;">
 
                 <div class="row">
                     <div class="col-sm-12">
@@ -76,7 +76,7 @@
 
 <br>
 
-            <div class="content" style="background-color: #fff;border-top: 3px solid cornflowerblue;padding: 15px;border-radius: 5px;">
+            <div class="content" style="background-color: #fff;border-top: 3px solid #333333;padding: 15px;border-radius: 5px;">
 
               <div class="row">
                   <div class="col-sm-12">
