--- a/Board/attenUpdates.html
+++ b/Board/attenUpdates.html
@@ -188,7 +188,7 @@ margin-bottom: 12px; /* Add some space below the input */
                   <ul>
                       <li class="menu-title">Boards Panel</li>
                       <li >
-                        <a href="adminattendance.html"><i class="fa fa-calendar"></i> <span>Attendance</span></a>
+                        <a href="attenUpdates.html.html"><i class="fa fa-calendar"></i> <span>Attendance</span></a>
                         </li>
     
     
