--- a/Board/attenUpdates.html
+++ b/Board/attenUpdates.html
@@ -188,7 +188,7 @@ margin-bottom: 12px; /* Add some space below the input */
                   <ul>
                       <li class="menu-title">Boards Panel</li>
                       <li >
-                        <a href="attenUpdates.html.html"><i class="fa fa-calendar"></i> <span>Attendance</span></a>
+                        <a href="attenUpdates.html"><i class="fa fa-calendar"></i> <span>Attendance</span></a>
                         </li>
     
     
@@ -215,8 +215,8 @@ margin-bottom: 12px; /* Add some space below the input */
           </div>
       </div>
       <div class="page-wrapper">
-          <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #0d6efd;padding: 20px;border-radius: 5px;">
-                <div class="row">
+          <div class="content" style="background-color: #fff;margin: 15px;border-top: 3px solid #0d6efd;padding: 3px;border-radius: 5px;">
+                <div class="row" style="padding: 15px">
                   <div class="col-sm-12">
                       <h4 class="page-title">Attendance Updates</h4><hr>
                   </div>
