--- a/Board/recruitments.html
+++ b/Board/recruitments.html
@@ -156,13 +156,13 @@ margin-bottom: 12px; /* Add some space below the input */
     
                       <table class="table custom-table" id="myTable" style="color: black;">
                           <thead>
-                              <tr style="background-color: #0d6efd;color: #fff;"> 
+                             <tr style="background-color: #0d6efd;color: #fff;"> 
                               <th scope="col">SNo.</th> 
-                              <th scope="col">Name.</th>
+                              <th scope="col" style="min-width: 20vh;">Name</th>
                               <th scope="col">Email</th>
-                              <th scope="col">Contact</th>
-                              <th scope="col">Whatsapp</th>
-                              <th scope="col">Department</th>
+                              <th scope="col" style="min-width: 14vh;">Contact</th>
+                              <th scope="col" style="min-width: 14vh;">Whatsapp</th>
+                              <th scope="col" style="min-width: 17vh;">Department</th>
                               <th scope="col">College</th>
                               <th scope="col">Term</th>
                        
