--- a/Board/payments.html
+++ b/Board/payments.html
@@ -219,7 +219,7 @@ margin-bottom: 12px; /* Add some space below the input */
                   </div>
                 </div>
 
-                <div style="padding: 15px">
+                <div style="margin-top: -15px">
                   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by name...">
                 </div>
               
