--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -130,7 +130,7 @@
               <div class="content"  style="background-color: #fff;margin: 15px;border-top: 3px solid #198754;border-radius: 5px;">
                 <div class="row">
                   <div class="col-sm-12">
-                      <h4 class="page-title">Leave Request</h4>
+                      <h4 class="page-title">Leave Request</h4><hr>
                   </div>
               </div>
                 
