--- a/MembersPanel/myupdates.html
+++ b/MembersPanel/myupdates.html
@@ -18,13 +18,25 @@
 
 <style>
       tr:nth-child(even) {background-color: #f2f2f2;}
-     tr:hover {background-color: rgb(231, 231, 231);}
+     tr:hover {background-color: #f2f2f2;}
 
 
      #month{
       /* transform: rotate(-40deg); */
       margin-top:20px;
       color: #198754;
+     }
+
+     #statuss{
+      /* transform: rotate(-40deg); */
+      font-weight:500;
+      color: #198754;
+     }
+
+     #dateee{
+      /* transform: rotate(-40deg); */
+      font-weight:500;
+      
      }
     
 </style>
